--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   ],
   "dependencies": {
     "react": "~0.11.2",
-    "HTMLImports": "~0.2.3"
+    "HTMLImports": "~0.2.3",
+    "CustomElements": "~0.2.4",
+    "ReactiveElements": "~0.3.1"
   }
 }
