--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "browser-sync": "^1.3.6",
     "del": "^0.1.2",
     "gulp": "^3.8.7",
+    "gulp-autoprefixer": "^1.0.1",
+    "gulp-changed": "^1.0.0",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.3.4",
+    "gulp-csso": "^0.2.9",
+    "gulp-if": "^1.2.5",
+    "gulp-load-plugins": "^0.7.0",
     "gulp-react": "^1.0.0",
+    "gulp-sass": "^1.2.0",
+    "gulp-size": "^1.1.0",
     "gulp-uglify": "^1.0.0"
   },
   "scripts": {
